--- a/dotNet5781_00_1853_9327/dotNet5781_00_1853_9327.csproj
+++ b/dotNet5781_00_1853_9327/dotNet5781_00_1853_9327.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Program9327.cs" />
     <Compile Include="Program1853.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
