--- a/dotNet5781_03A_1853_9327/dotNet5781_03A_1853_9327.csproj
+++ b/dotNet5781_03A_1853_9327/dotNet5781_03A_1853_9327.csproj
@@ -100,5 +100,8 @@
       <Name>dotNet5781_02_1853_9327</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="BUS ICON...jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
