--- a/DLObject/DLObject.csproj
+++ b/DLObject/DLObject.csproj
@@ -51,6 +51,7 @@
     <Compile Include="DataStore.cs" />
     <Compile Include="DLObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="XMLTools.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
