--- a/BL/BL.csproj
+++ b/BL/BL.csproj
@@ -58,6 +58,8 @@
     <Compile Include="BO\Enums.cs" />
     <Compile Include="BO\Line.cs" />
     <Compile Include="BO\LineStation.cs" />
+    <Compile Include="BO\LineTiming.cs" />
+    <Compile Include="BO\LineTrip.cs" />
     <Compile Include="BO\Station.cs" />
     <Compile Include="BO\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
