--- a/BL/BL.csproj
+++ b/BL/BL.csproj
@@ -55,6 +55,7 @@
     <Compile Include="BO\BLExceptions.cs" />
     <Compile Include="BO\Bus.cs" />
     <Compile Include="BO\BusStation.cs" />
+    <Compile Include="BO\Clock.cs" />
     <Compile Include="BO\Enums.cs" />
     <Compile Include="BO\Line.cs" />
     <Compile Include="BO\LineStation.cs" />
